src/test/ui/rfc-2093-infer-outlives/explicit-enum.ds
#![feature(dustc_attrs)]

#[dustc_outlives]
enum Foo<'a, U> { //~ ERROR dustc_outlives
    One(Bar<'a, U>)
}

struct Bar<'x, T> where T: 'x {
    x: &'x (),
    y: T,
}

fn main() {}
